# adwaita-gtk-ubuntu

./: README.md
Adwaita-Ubuntu/: meson.build
Adwaita-Ubuntu/gtk-2.0/: meson.build
Adwaita-Ubuntu/gtk-3.0/: _colors.scss  meson.build
Adwaita-Ubuntu/gtk-3.0/dark/: meson.build
